opam-version: "2.0"
name: "infv"
version: "dev"
maintainer: "Yoshihiro Imai <y.imai@proof-ninja.co.jp>"

homepage: "https://proof-ninja.co.jp/"
bug-reports: "https://github.com/proof-ninja/whyml_sample/issues"
dev-repo: "git+https://github.com/proof-ninja/whyml_sample"


depends: [
  "ocaml" {>= "4.09.1"}
  "why3"
]

authors: [
  "Yoshihiro Imai <y.imai@proof-ninja.co.jp>"
  "ymoymoon"
]

synopsis: "inference language with Why3"